# xml_lite

./: .gitignore  .travic.yml  .travis.yml  CMakeLists.txt  README.md  xml-lite.bnf  xml_to_txt.service
doc/: Doxyfile.in
include/: App.h  AppException.h  hello.h
include/daemon/: Daemon.h
include/demon/: Demon.h  DemonWorker.h
include/entity/: ParamText.h  ParamTextSerializer.h  Table.h  TableSerializer.h
include/filesystem/: Directory.h
include/xml/: Graph.h  Lexer.h  Parser.h  Token.h  Xml.h  XmlDeserializeContext.h  XmlNode.h  XmlObject.h  XmlParser.h  XmlSerializer.h
include/xml/exception/: XmlParseError.h
include/xml/util/: Optional.h
src/: CMakeLists.txt  main.cpp
src/lib/: App.cpp  AppException.cpp  hello.cpp
src/lib/daemon/: Daemon.cpp
src/lib/demon/: Demon.cpp
src/lib/entity/: ParamTextSerializer.cpp  TableSerializer.cpp
src/lib/filesystem/: Directory.cpp
src/lib/xml/: Lexer.cpp  Parser.cpp  Token.cpp  Xml.cpp  XmlObject.cpp
src/lib/xml/exception/: XmlParserError.cpp
test/: CMakeLists.txt
test/include/: LexerTest.h  asserts.h
test/src/: GraphTest.cpp  LexerTest.cpp  ParserTest.cpp  main.cpp
